# libsconf

./: CMakeLists.txt  README  README.md  TODO
cmake/: Doxyfile.in  cmake_clear.cmake.in
include/libsconf/: data.h  data_hash.h  data_list.h  data_stack.h  data_token.h  data_type.h  hash_map.h  lex.h  libsconf.h  list.h  parse.h  stack.h
src/: data.c  hash_map.c  lex.c  libsconf.c  list.c  parse.c  stack.c
test/: CMakeLists.txt  compile
test/general/: CMakeLists.txt  main.c  test.cfg
test/hash_map/: CMakeLists.txt  hash.c
test/lib/: main.c
test/list/: CMakeLists.txt  list.c
